--- a/index.html
+++ b/index.html
@@ -131,6 +131,27 @@
   </section>
 
   <section id="assortiment">
+    <section id="assortiment">
+  <h2>Ons Assortiment</h2>
+  <div class="grid">
+    <div class="card">
+      <img src="https://images.unsplash.com/photo-1600891964092-4316c288032e?auto=format&fit=crop&w=600&q=80" alt="Taart">
+      <h3>Taarten</h3>
+      <p>Vanaf €25</p>
+    </div>
+    <div class="card">
+      <img src="https://images.unsplash.com/photo-1607252650355-f7fd0460ccdb?auto=format&fit=crop&w=600&q=80" alt="Cupcakes">
+      <h3>Cupcakes</h3>
+      <p>Vanaf €12 per 6 stuks</p>
+    </div>
+    <div class="card">
+      <img src="https://images.unsplash.com/photo-1623252162769-25b1f2bb274b?auto=format&fit=crop&w=600&q=80" alt="Bruidstaart">
+      <h3>Bruidstaarten</h3>
+      <p>Prijs op aanvraag</p>
+    </div>
+  </div>
+</section>
+
     <h2>Ons Assortiment</h2>
     <div class="grid">
       <div class="card">
@@ -182,3 +203,4 @@
 
 </body>
 </html>
+
