--- a/index.html
+++ b/index.html
@@ -114,9 +114,16 @@
 <body>
 
   <header>
-    <h1>Rana's Taartjes</h1>
-    <p>Ambachtelijke taarten met liefde gemaakt</p>
-  </header>
+  <h1>Rana's Taartjes</h1>
+  <p>Ambachtelijke taarten met liefde gemaakt</p>
+  <p style="max-width: 700px; margin: 1rem auto 0; font-size: 1.1rem;">
+    Welkom bij <strong>Rana’s Taartjes</strong>! Wij maken elke taart met passie, creativiteit 
+    en oog voor detail. Van vrolijke cupcakes tot elegante bruidstaarten: 
+    alles wordt met liefde gebakken om jouw speciale momenten onvergetelijk te maken. 
+    Neem een kijkje in ons assortiment en ontdek hoe wij jouw idee kunnen omtoveren tot iets zoets en unieks. 🎂
+  </p>
+</header>
+
 
   <nav>
     <a href="#over">Over ons</a>
@@ -130,24 +137,7 @@
     <p>Welkom bij <strong>Rana’s Taartjes</strong>. Wij maken taarten, cupcakes en andere lekkernijen volledig op maat. Met passie, creativiteit en liefde voor detail zorgen we voor de perfecte traktatie bij iedere gelegenheid.</p>
   </section>
 
-  <section id="assortiment">
-    <section id="assortiment">
-  <h2>Ons Assortiment</h2>
-  <div class="grid">
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1600891964092-4316c288032e?auto=format&fit=crop&w=600&q=80" alt="Taart">
-      <h3>Taarten</h3>
-      <p>Vanaf €25</p>
-    </div>
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1607252650355-f7fd0460ccdb?auto=format&fit=crop&w=600&q=80" alt="Cupcakes">
-      <h3>Cupcakes</h3>
-      <p>Vanaf €12 per 6 stuks</p>
-    </div>
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1623252162769-25b1f2bb274b?auto=format&fit=crop&w=600&q=80" alt="Bruidstaart">
-      <h3>Bruidstaarten</h3>
-      <p>Prijs op aanvraag</p>
+
     </div>
   </div>
 </section>
@@ -203,4 +193,5 @@
 
 </body>
 </html>
+
 
