--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
   <h1>Rana's Taartjes</h1>
   <p>Ambachtelijke taarten met liefde gemaakt</p>
   <p style="max-width: 700px; margin: 1rem auto 0; font-size: 1.1rem;">
-    Welkom bij <strong>Rana’s Taartjes</strong>! Wij maken elke taart met passie, creativiteit 
-    en oog voor detail. Van vrolijke cupcakes tot elegante bruidstaarten: 
+    Welkom bij <strong>Rana’s Taartjes</strong>! Wij maken alle zoetigheden met passie, creativiteit 
+  en oog voor detail. Van kleurrijke gebakjes tot elegante desserts: 
     alles wordt met liefde gebakken om jouw speciale momenten onvergetelijk te maken. 
     Neem een kijkje in ons assortiment en ontdek hoe wij jouw idee kunnen omtoveren tot iets zoets en unieks. 🎂
   </p>
@@ -193,5 +193,6 @@
 
 </body>
 </html>
+
 
 
