--- a/index.html
+++ b/index.html
@@ -146,17 +146,17 @@
     <div class="grid">
       <div class="card">
         <img src="https://source.unsplash.com/400x300/?cake" alt="Taart">
-        <h3>Taarten</h3>
+        <h3>Gebakjes</h3>
         <p>Vanaf €25</p>
       </div>
       <div class="card">
         <img src="https://source.unsplash.com/400x300/?cupcakes" alt="Cupcakes">
-        <h3>Cupcakes</h3>
+        <h3>Chocolade & Bonbons</h3>
         <p>Vanaf €12 per 6 stuks</p>
       </div>
       <div class="card">
         <img src="https://source.unsplash.com/400x300/?wedding-cake" alt="Bruidstaart">
-        <h3>Bruidstaarten</h3>
+        <h3>Speciale desserts</h3>
         <p>Prijs op aanvraag</p>
       </div>
     </div>
@@ -193,6 +193,7 @@
 
 </body>
 </html>
+
 
 
 
